affichage des projets

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -338,7 +338,12 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<div class="container">
 
 <router-outlet />
 
-<app-tableau-principal/>
+
+
+<app-home/>
+
+</div>
