--- a/client/src/app/tableau-principal/tableau-principal.html
+++ b/client/src/app/tableau-principal/tableau-principal.html
@@ -1,23 +1,28 @@
 <p>tableau-principal works!</p>
 
-<button (click)="test()" class="btn">test</button>
+<button (click)="recharger()" class="btn">Recharger</button>
 
-<button type="button" class="btn">Base class</button>
+<!--<button type="button" class="btn">Base class</button>-->
 
 
 <hr>
 
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+<!--<button type="button" class="btn btn-primary">Primary</button>-->
+<!--<button type="button" class="btn btn-secondary">Secondary</button>-->
+<!--<button type="button" class="btn btn-success">Success</button>-->
+<!--<button type="button" class="btn btn-danger">Danger</button>-->
+<!--<button type="button" class="btn btn-warning">Warning</button>-->
+<!--<button type="button" class="btn btn-info">Info</button>-->
+<!--<button type="button" class="btn btn-light">Light</button>-->
+<!--<button type="button" class="btn btn-dark">Dark</button>-->
 
-<button type="button" class="btn btn-link">Link</button>
+<!--<button type="button" class="btn btn-link">Link</button>-->
 
+@if(chargement){
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+} @else {
 
 @if (listeProjet) {
 
@@ -63,5 +68,7 @@
 
     </tbody>
   </table>
+
+}
 
 }
