--- a/client/src/app/tableau-principal/tableau-principal.html
+++ b/client/src/app/tableau-principal/tableau-principal.html
@@ -47,6 +47,7 @@
         <th scope="col">Version</th>
         <th scope="col">Parent</th>
         <th scope="col">Description</th>
+        <th scope="col">Git</th>
       </tr>
       </thead>
       <tbody>
@@ -68,7 +69,7 @@
             </td>
             <td>
               @if (projet.parent) {
-                @if (projet.parent.artefactId == 'spring-boot-starter-parent') {
+                @if (projet.parent.artefactId == 'spring-boot-starter-parent' && projet.parent.groupId == 'org.springframework.boot') {
                   Spring boot {{ projet.parent.version }}
                 } @else {
                   {{ projet.parent.groupId }}:{{ projet.parent.artefactId }}:{{ projet.parent.version }}
@@ -77,6 +78,16 @@
               }
             </td>
             <td>{{ projet.description }}</td>
+            <td>
+              @if (projet.infoGit) {
+              <div class="d-flex flex-column  mb-3">
+                <div>date : {{ projet.infoGit?.date | date: 'dd/MM/yyyy' }}</div>
+                <div>hash : {{ projet.infoGit?.idCommit }}</div>
+                <div>branche : {{ projet.infoGit?.branche }}</div>
+                <div>message : {{ projet.infoGit?.message }}</div>
+              </div>
+              }
+            </td>
           </tr>
         }
 
