ajout d'ag grid

--- a/client/src/app/tableau-principal/tableau-principal.html
+++ b/client/src/app/tableau-principal/tableau-principal.html
@@ -94,6 +94,17 @@
       </tbody>
     </table>
 
+    tableau 2 :
+    <ag-grid-angular
+      [rowData]="tableau"
+      [columnDefs]="colDefs"
+    />
+
   }
+
+  tableau 3 :
+  <ag-grid-angular
+    [rowData]="rowData"
+    [columnDefs]="colDefs2" />
 
 }
