--- a/client/src/app/tableau-principal/tableau-principal.scss
+++ b/client/src/app/tableau-principal/tableau-principal.scss
@@ -1,4 +1,4 @@
-.ag-theme-alpine, ag-grid-angular {
-  min-height: 500px;
-  height: 500px;
-}
+//.ag-theme-alpine, ag-grid-angular {
+//  min-height: 500px;
+//  height: 500px;
+//}
