affichage de la date de dernière modification

--- a/client/src/app/tableau-principal/git-cell-aggrid.html
+++ b/client/src/app/tableau-principal/git-cell-aggrid.html
@@ -1,6 +1,6 @@
 @if (data) {
   <div class="d-flex flex-column  mb-3">
-    <div>date : {{ data.infoGitDate | date: 'dd/MM/yyyy' }}</div>
+    <div>date : {{ data.infoGitDate | date: 'dd/MM/yyyy H:mm:ss' }}</div>
     <div>hash : {{ data.infoGitIdCommit }}</div>
     <div>branche : {{ data.infoGitBranche }}</div>
     <div>message : {{ data.infoGitMessage }}</div>
