--- a/client/src/app/tableau-principal/tableau-principal.html
+++ b/client/src/app/tableau-principal/tableau-principal.html
@@ -94,7 +94,7 @@
 <!--      </tbody>-->
 <!--    </table>-->
 
-    tableau 2 :
+<!--    tableau 2 :-->
     <ag-grid-angular
       [rowData]="tableau"
       [columnDefs]="colDefs"
