--- a/client/src/app/details/details.html
+++ b/client/src/app/details/details.html
@@ -1,117 +1,226 @@
-<p>details works!</p>
-<p>nom projet : {{ nomProjet() }}</p>
-<p>{{ projet()?.nom }}</p>
-<p>Description : {{ projet()?.description }}</p>
+<!--<div class="card">-->
 
-<hr/>
+<!--  <div class="card-body">-->
 
-<table class="table">
-  <!--  <thead>-->
-  <!--  <tr>-->
-  <!--    <th>Nom</th>-->
-  <!--    <th>Valeur</th>-->
-  <!--  </tr>-->
-  <!--  </thead>-->
-  <tbody>
-  <tr>
-    <th>Nom</th>
-    <td>{{ projet()?.nom }}</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>{{ projet()?.description }}</td>
-  </tr>
-  <tr>
-    <th>Parent</th>
-    <td>
-      {{ projet()?.parent?.groupId }}:{{ projet()?.parent?.artefactId }}:{{ projet()?.parent?.version }}
-    </td>
-  </tr>
-  <tr>
-    <th>Artifact</th>
-    <td>
-      {{ projet()?.artifact?.groupId }}:{{ projet()?.artifact?.artefactId }}:{{ projet()?.artifact?.version }}
-    </td>
-  </tr>
-  </tbody>
-</table>
 
-@if (projet()?.properties) {
-<hr/>
-Propriétés :
+<!--    <p>nom projet : {{ nomProjet() }}</p>-->
+<!--    <p>{{ projet()?.nom }}</p>-->
+<!--    <p>Description : {{ projet()?.description }}</p>-->
 
-<table class="table">
-  <tbody>
+<!--  </div>-->
 
-    @for (property of projet()?.properties | keyvalue; track property.key) {
+<!--</div>-->
+
+<!--<hr/>-->
+
+<div class="card">
+
+  <div class="card-body">
+
+    <table class="table">
+      <!--  <thead>-->
+      <!--  <tr>-->
+      <!--    <th>Nom</th>-->
+      <!--    <th>Valeur</th>-->
+      <!--  </tr>-->
+      <!--  </thead>-->
+      <tbody>
       <tr>
-        <th>{{ property.key }}</th>
-        <td>{{ property.value }}</td>
+        <th>Nom</th>
+        <td>{{ projet()?.nom }}</td>
       </tr>
-
-    }
-
-  </tbody>
-</table>
-
-}
-
-@if (projet()?.dependencies) {
-<hr/>
-dépendances :
-
-<table class="table">
-  <tbody>
-
-    @for (dependance of projet()?.dependencies; track dependance.groupId ; let index = $index) {
-
       <tr>
-        <th>dependance {{index}}</th>
-        <td>{{ dependance.groupId }} : {{ dependance.artefactId }} : {{ dependance.version }}</td>
+        <th>Description</th>
+        <td>{{ projet()?.description }}</td>
       </tr>
-    }
+      <tr>
+        <th>Parent</th>
+        <td>
+          {{ projet()?.parent?.groupId }}:{{ projet()?.parent?.artefactId }}:{{ projet()?.parent?.version }}
+        </td>
+      </tr>
+      <tr>
+        <th>Artifact</th>
+        <td>
+          {{ projet()?.artifact?.groupId }}:{{ projet()?.artifact?.artefactId }}:{{ projet()?.artifact?.version }}
+        </td>
+      </tr>
+      <tr>
+        <th>Modules</th>
+        <td>{{projet()?.modules}}</td>
+      </tr>
+      <tr>
+        <th>Propriétés</th>
+        <td>
+          @if (projet()?.properties) {
 
-  </tbody>
-</table>
-}
+            <table class="table">
+              <tbody>
+
+                @for (property of projet()?.properties | keyvalue; track property.key) {
+                  <tr>
+                    <th>{{ property.key }}</th>
+                    <td>{{ property.value }}</td>
+                  </tr>
+
+                }
+
+              </tbody>
+            </table>
+
+          }
+        </td>
+      </tr>
+      <tr>
+        <th>Dépendances</th>
+        <td>
+          @if (projet()?.dependencies) {
+
+            <table class="table">
+              <tbody>
+
+                @for (dependance of projet()?.dependencies; track dependance.groupId) {
+
+                  <tr>
+                    <td>{{ dependance.groupId }} : {{ dependance.artefactId }} : {{ dependance.version }}</td>
+                  </tr>
+                }
+
+              </tbody>
+            </table>
+
+          }
+        </td>
+      </tr>
+      <tr>
+        <th>Git</th>
+        <td>
+          @if (projet()?.infoGit) {
+
+            <table class="table">
+              <tbody>
+              <tr>
+                <th>Date du commit</th>
+                <td>{{projet()?.infoGit?.date | date: 'dd/MM/yyyy H:mm:ss'}}</td>
+              </tr>
+              <tr>
+                <th>Id commit</th>
+                <td>{{projet()?.infoGit?.idCommit}}</td>
+              </tr>
+              <tr>
+                <th>Branche</th>
+                <td>{{projet()?.infoGit?.branche}}</td>
+              </tr>
+              <tr>
+                <th>Message</th>
+                <td>{{projet()?.infoGit?.message}}</td>
+              </tr>
+              </tbody>
+            </table>
+
+          }
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
+  </div>
+</div>
+
+
+
+
 
 @if (projet()?.projetEnfants) {
-<hr/>
+  <hr/>
 
-@for (projet of projet()?.projetEnfants; track projet.nom) {
-  <p>
-    Module {{ projet.nom }}
-  </p>
-  <table class="table">
-    <!--  <thead>-->
-    <!--  <tr>-->
-    <!--    <th>Nom</th>-->
-    <!--    <th>Valeur</th>-->
-    <!--  </tr>-->
-    <!--  </thead>-->
-    <tbody>
-    <tr>
-      <th>Nom</th>
-      <td>{{ projet?.nom }}</td>
-    </tr>
-    <tr>
-      <th>Description</th>
-      <td>{{ projet?.description }}</td>
-    </tr>
-    <tr>
-      <th>Parent</th>
-      <td>
-        {{ projet?.parent?.groupId }}:{{ projet?.parent?.artefactId }}:{{ projet?.parent?.version }}
-      </td>
-    </tr>
-    <tr>
-      <th>Artifact</th>
-      <td>
-        {{ projet?.artifact?.groupId }}:{{ projet?.artifact?.artefactId }}:{{ projet?.artifact?.version }}
-      </td>
-    </tr>
-    </tbody>
-  </table>
-}
+  @for (projet of projet()?.projetEnfants; track projet.nom) {
+    <div class="card">
+
+      <div class="card-body">
+
+        <p class="card-title">
+          Module {{ projet.nom }}
+        </p>
+        <table class="table">
+          <!--  <thead>-->
+          <!--  <tr>-->
+          <!--    <th>Nom</th>-->
+          <!--    <th>Valeur</th>-->
+          <!--  </tr>-->
+          <!--  </thead>-->
+          <tbody>
+          <tr>
+            <th>Nom</th>
+            <td>{{ projet?.nom }}</td>
+          </tr>
+          <tr>
+            <th>Description</th>
+            <td>{{ projet?.description }}</td>
+          </tr>
+          <tr>
+            <th>Parent</th>
+            <td>
+              {{ projet?.parent?.groupId }}:{{ projet?.parent?.artefactId }}:{{ projet?.parent?.version }}
+            </td>
+          </tr>
+          <tr>
+            <th>Artifact</th>
+            <td>
+              {{ projet?.artifact?.groupId }}:{{ projet?.artifact?.artefactId }}:{{ projet?.artifact?.version }}
+            </td>
+          </tr>
+          <tr>
+            <th>Modules</th>
+            <td>{{projet?.modules}}</td>
+          </tr>
+          <tr>
+            <th>Propriétés</th>
+            <td>
+              @if (projet?.properties) {
+                <table class="table">
+                  <tbody>
+
+                    @for (property of projet?.properties | keyvalue; track property.key) {
+                      <tr>
+                        <th>{{ property.key }}</th>
+                        <td>{{ property.value }}</td>
+                      </tr>
+
+                    }
+
+                  </tbody>
+                </table>
+
+              }
+            </td>
+          </tr>
+          <tr>
+            <th>Dépendances</th>
+            <td>
+              @if (projet?.dependencies) {
+
+                <table class="table">
+                  <tbody>
+
+                    @for (dependance of projet?.dependencies; track dependance.groupId) {
+
+                      <tr>
+                        <td>{{ dependance.groupId }} : {{ dependance.artefactId }} : {{ dependance.version }}</td>
+                      </tr>
+                    }
+
+                  </tbody>
+                </table>
+
+              }
+            </td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </div>
+  }
 }
 
