affichage sur toute la page

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -338,7 +338,7 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<div class="container">
+<!--<div class="container">-->
 
 <router-outlet />
 
@@ -346,4 +346,4 @@
 
 <!--<app-home/>-->
 
-</div>
+<!--</div>-->
