--- a/client/src/app/home/home.html
+++ b/client/src/app/home/home.html
@@ -1,5 +1,7 @@
-
+<div class="container-fluid">
 <app-menu-principal></app-menu-principal>
 
 <app-tableau-principal></app-tableau-principal>
+
+</div>
 
