--- a/client/src/app/component/tableau-principal/git-cell-aggrid.html
+++ b/client/src/app/component/tableau-principal/git-cell-aggrid.html
@@ -1,4 +1,4 @@
-@if (data) {
+@if (data && data.infoGitDate) {
   <div class="d-flex flex-column  mb-3">
     <div>date : {{ data.infoGitDate | date: 'dd/MM/yyyy H:mm:ss' }}</div>
     <div>hash : {{ data.infoGitIdCommit }}</div>
