ajout du toaster

--- a/client/src/app/component/tableau-principal/cell/module-details-cell-aggrid.html
+++ b/client/src/app/component/tableau-principal/cell/module-details-cell-aggrid.html
@@ -1,5 +1,5 @@
 @if (data && data.detailModules) {
-  @for (module of data?.detailModules | keyvalue; track module.key) {
+  @for (module of data.detailModules | keyvalue; track module.key) {
     <span>{{ module.key }} : {{module.value}}</span>
   }
 }
