--- a/client/src/app/component/details/details.html
+++ b/client/src/app/component/details/details.html
@@ -31,7 +31,17 @@
   <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
 </div>
 
-</form>
+
+
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary" (click)="majVersion($event)">Mise à jour version</button>
+      <button type="button" class="btn btn-primary" (click)="listConfig($event)">Liste configuration</button>
+      <button type="button" class="btn btn-primary" (click)="recharger($event)">Recharger</button>
+    </div>
+
+
+
+  </form>
 
 <!--<div class="card">-->
 
@@ -429,5 +439,18 @@
 
 <!--}-->
 
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div #toastEl id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+<!--        <img src="..." class="rounded me-2" alt="...">-->
+        <strong class="me-auto">Bootstrap</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body">
+        Hello, world! This is a toast message.
+      </div>
+    </div>
+  </div>
 
 </div>
