différence de configuration

--- a/client/src/app/component/details/details.html
+++ b/client/src/app/component/details/details.html
@@ -441,4 +441,6 @@
 
   <app-maj-version #majVersion id="majVersionId"></app-maj-version>
 
+  <app-changement-config #changementConfig id="changementConfigId"></app-changement-config>
+
 </div>
