--- a/client/src/app/component/tableau-principal/tableau-principal.html
+++ b/client/src/app/component/tableau-principal/tableau-principal.html
@@ -16,21 +16,8 @@
 
 </form>
 
-<!--<button type="button" class="btn">Base class</button>-->
-
-
 <hr>
 
-<!--<button type="button" class="btn btn-primary">Primary</button>-->
-<!--<button type="button" class="btn btn-secondary">Secondary</button>-->
-<!--<button type="button" class="btn btn-success">Success</button>-->
-<!--<button type="button" class="btn btn-danger">Danger</button>-->
-<!--<button type="button" class="btn btn-warning">Warning</button>-->
-<!--<button type="button" class="btn btn-info">Info</button>-->
-<!--<button type="button" class="btn btn-light">Light</button>-->
-<!--<button type="button" class="btn btn-dark">Dark</button>-->
-
-<!--<button type="button" class="btn btn-link">Link</button>-->
 
 @if (chargement) {
   <div class="spinner-border" role="status">
@@ -40,73 +27,65 @@
 
   @if (listeProjet) {
 
-<!--    <table class="table">-->
-<!--      <thead>-->
-<!--      <tr>-->
-<!--        <th scope="col">Nom</th>-->
-<!--        <th scope="col">Version</th>-->
-<!--        <th scope="col">Parent</th>-->
-<!--        <th scope="col">Description</th>-->
-<!--        <th scope="col">Git</th>-->
-<!--      </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--        @for (projet of listeProjet; track projet.nom) {-->
+    <form [formGroup]="formGrouId2">
+      <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" id="btnradio1" autocomplete="off" checked [value]="AFFICHAGE_TABLEAU"
+               formControlName="affichage">
+        <label class="btn btn-outline-primary" for="btnradio1">Tableau</label>
 
-<!--          <tr>-->
-<!--            <th>-->
-<!--              @if (projet.nom && this.formGrouId.value) {-->
-<!--                <a [routerLink]="['details',this.groupeIdSelected(), projet.nom]">{{ projet.nom }}</a>-->
-<!--              } @else {-->
-<!--                {{ projet.nom }}-->
-<!--              }-->
-<!--            </th>-->
-<!--            <td>-->
-<!--              @if (projet.artifact) {-->
-<!--                &lt;!&ndash;              {{ projet.artifact.groupId }}:{{ projet.artifact.artefactId }}:{{ projet.artifact.version }}&ndash;&gt;-->
-<!--                {{ projet.artifact.version }}-->
-<!--              }-->
-<!--            </td>-->
-<!--            <td>-->
-<!--              @if (projet.parent) {-->
-<!--                @if (projet.parent.artefactId == 'spring-boot-starter-parent' && projet.parent.groupId == 'org.springframework.boot') {-->
-<!--                  Spring boot {{ projet.parent.version }}-->
-<!--                } @else {-->
-<!--                  {{ projet.parent.groupId }}:{{ projet.parent.artefactId }}:{{ projet.parent.version }}-->
-<!--                }-->
+        <input type="radio" class="btn-check" id="btnradio2" autocomplete="off" [value]="AFFICHAGE_RECHERCHE"
+               formControlName="affichage">
+        <label class="btn btn-outline-primary" for="btnradio2">Recherche</label>
 
-<!--              }-->
-<!--            </td>-->
-<!--            <td>{{ projet.description }}</td>-->
-<!--            <td>-->
-<!--              @if (projet.infoGit) {-->
-<!--              <div class="d-flex flex-column  mb-3">-->
-<!--                <div>date : {{ projet.infoGit?.date | date: 'dd/MM/yyyy' }}</div>-->
-<!--                <div>hash : {{ projet.infoGit?.idCommit }}</div>-->
-<!--                <div>branche : {{ projet.infoGit?.branche }}</div>-->
-<!--                <div>message : {{ projet.infoGit?.message }}</div>-->
-<!--              </div>-->
-<!--              }-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        }-->
+      </div>
 
-<!--      </tbody>-->
-<!--    </table>-->
+    </form>
 
-<!--    tableau 2 :-->
-    <ag-grid-angular
-      [rowData]="tableau"
-      [columnDefs]="colDefs"
-      domLayout="autoHeight"
-      [gridOptions]="gridOptions"
-    />
+
+    @if (formGrouId2.value.affichage == AFFICHAGE_TABLEAU) {
+      <ag-grid-angular
+        [rowData]="tableau"
+        [columnDefs]="colDefs"
+        domLayout="autoHeight"
+        [gridOptions]="gridOptions"
+      />
+    } @else {
+      @if (formGrouId2.value.affichage == AFFICHAGE_RECHERCHE) {
+
+        <div>
+          <div>Recherche</div>
+
+
+          <div>
+            <form [formGroup]="formGrouId3">
+            <input type="text" [value]="critereRecherche" formControlName="recherche">
+            <button (click)="rechercher($event)">Rechercher</button>
+            </form>
+          </div>
+
+          @if (chargementRecherche) {
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          } @else {
+            @if (resultatRecherche) {
+              <table>
+                @for (ligne of resultatRecherche | keyvalue; track ligne.key) {
+                  <tr>
+                    <td>{{ ligne.value.fichier }} : {{ligne.value.noLigne}}</td>
+                    <td>{{ ligne.value.ligne }}</td>
+                  </tr>
+                }
+              </table>
+            } @else {
+              <div>Aucun résultat</div>
+            }
+          }
+
+        </div>
+      }
+    }
 
   }
-
-<!--  tableau 3 :-->
-<!--  <ag-grid-angular-->
-<!--    [rowData]="rowData"-->
-<!--    [columnDefs]="colDefs2" />-->
 
 }
