affichage de l'analyse des dépendances

--- a/client/src/app/component/details/details.html
+++ b/client/src/app/component/details/details.html
@@ -22,6 +22,7 @@
       <button type="button" class="btn btn-primary" (click)="majVersion2($event)">Mise à jour version</button>
       <button type="button" class="btn btn-primary" (click)="listConfig($event)">Liste configuration</button>
       <button type="button" class="btn btn-primary" (click)="listDependances($event)">Liste des dépendances</button>
+      <button type="button" class="btn btn-primary" (click)="analyseDependances($event)">Analyse des dépendances</button>
       <button type="button" class="btn btn-primary" (click)="recharger($event)">Recharger</button>
     </div>
 
