--- a/client/src/app/component/details/details.html
+++ b/client/src/app/component/details/details.html
@@ -1,54 +1,76 @@
-
 <div class="container">
 
   <a [routerLink]="['/']">Retour</a>
 
   <form [formGroup]="choixForm">
 
-<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-  <input type="radio" class="btn-check" name="choix" id="btnradio1" autocomplete="off" formControlName="choix" value="1">
-  <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
+    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+      <input type="radio" class="btn-check" name="choix" id="btnradio1" autocomplete="off" formControlName="choix"
+             value="1">
+      <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
 
-  <input type="radio" class="btn-check" name="choix" id="btnradio2" autocomplete="off" formControlName="choix" value="2">
-  <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
+      <input type="radio" class="btn-check" name="choix" id="btnradio2" autocomplete="off" formControlName="choix"
+             value="2">
+      <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
 
-  <input type="radio" class="btn-check" name="choix" id="btnradio3" autocomplete="off" formControlName="choix"  value="3">
-  <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
-</div>
-
+      <input type="radio" class="btn-check" name="choix" id="btnradio3" autocomplete="off" formControlName="choix"
+             value="3">
+      <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+    </div>
 
 
     <div class="btn-group" role="group" aria-label="Basic example">
       <button type="button" class="btn btn-primary" (click)="majVersion2($event)">Mise à jour version</button>
       <button type="button" class="btn btn-primary" (click)="listConfig($event)">Liste configuration</button>
       <button type="button" class="btn btn-primary" (click)="listDependances($event)">Liste des dépendances</button>
-      <button type="button" class="btn btn-primary" (click)="analyseDependances($event)">Analyse des dépendances</button>
+      <button type="button" class="btn btn-primary" (click)="analyseDependances($event)">Analyse des dépendances
+      </button>
       <button type="button" class="btn btn-primary" (click)="recharger($event)">Recharger</button>
+      <p-button label="Check"/>
     </div>
-
 
 
   </form>
 
-  @if (projet()) {
-  <app-details-projet [projet]="projet()" [moduleEnfant]="false"></app-details-projet>
-  }
+  <p-tabs value="0">
+    <p-tablist>
+      <p-tab value="0">Pom</p-tab>
+      <p-tab value="1">Recherche</p-tab>
+      <p-tab value="2">Autre</p-tab>
+    </p-tablist>
+    <p-tabpanels>
+      <p-tabpanel value="0">
+        @if (projet()) {
+          <app-details-projet [projet]="projet()" [moduleEnfant]="false"></app-details-projet>
+        }
 
 
-@if (projet()?.projetEnfants) {
-  <hr/>
+        @if (projet()?.projetEnfants) {
+          <hr/>
 
-  @for (projet of projet()?.projetEnfants; track projet.nom) {
+          @for (projet of projet()?.projetEnfants; track projet.nom) {
 
-    <app-details-projet [projet]="projet" [moduleEnfant]="true"></app-details-projet>
+            <app-details-projet [projet]="projet" [moduleEnfant]="true"></app-details-projet>
 
-  }
-}
+          }
+        }
+
+
+      </p-tabpanel>
+
+      <p-tabpanel value="1">
+      </p-tabpanel>
+
+      <p-tabpanel value="2">
+      </p-tabpanel>
+
+    </p-tabpanels>
+  </p-tabs>
 
   <app-maj-version #majVersion id="majVersionId"></app-maj-version>
 
   <app-changement-config #changementConfig id="changementConfigId"></app-changement-config>
 
-  <app-run #run id="runId"  ></app-run>
+  <app-run #run id="runId"></app-run>
 
 </div>
